--- a/weekly_task/alen_solly/css/style.css
+++ b/weekly_task/alen_solly/css/style.css
@@ -386,14 +386,15 @@ left:10px;
   .container7{
     height:auto;
     width: 100%;
-    margin-top: 40px;
+    margin-top: 10vh;
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 30px;
   }
   .container7divs11{
     height:60vh;
     width:40vw;
-    background-color: rgb(32, 65, 102);
+    background-color:  #0E3051;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
   }
@@ -414,6 +415,7 @@ left:10px;
     width:5vw;
     height:13vh;
     background-color: #0E3051;
+    margin-left: 8vw;
   }
   .c712{
     width:20vw;
@@ -435,16 +437,231 @@ left:10px;
   .container7divs2{
     height:75vh;
     width:54vw;
-    background-color: #0E3051;
+    /* background-color: #0E3051; */
+    color: black;
     margin-left: 20px;
     border-radius:5px;
     overflow-y: hidden;
+    display: flex;
+    overflow-y: hidden;
+    gap:20px;
+    margin-left: 20px;
   }
   .c7d2divs{
-    width:20vw;
     height:75vh;
-    background-color: aqua;
+    min-width:20vw;     
+    
+    color:black;        
   }
+  .c7d2divs1{
+    height: 55vh;
+    width:100%;
+    background-color: #0E3051;
+    
+  }
+  .c7d2divs1 img{
+    height:100%;
+    width:100%;
+  }
+  .c711{
+    margin-left:0px;
+  }
+  .c7round{
+    border: 1px solid white;
+    background-color: blue;
+    width: 20px;
+    height: 20px;
+    border-radius: 50px;
+  }
+  .c7dtext{
+    color:black;
+    gap:10px;
+    display: flex;
+    margin: 5px;
+}
+.container7divs2::-webkit-scrollbar {
+    width: 5px;
+    height: 3px;
+  }
+  ::-webkit-scrollbar-track {
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: rgb(75, 74, 74);
+    border-radius: 10px;
+  }
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(0, 0, 0);
+  }
+  /* container8 */
+  .container8{
+    width: 100%;
+    height:70vh;
+    background-color:#0E3051 ;
+    margin-top: 10vh;
+    position:relative;
+  }
+  .container8 img{
+    width:100%;
+    height:100%;
+  }
+  .c8box{
+    width:40vw;
+    height:50vh;
+    background-color: #ffdc04;
+    position: absolute;
+    top:10vh;
+    left:10vw;
+    border-radius: 10px;
+  }
+  .c8box div{
+    margin-left: 3vw;
+  }
+  .c8div1{
+    margin-top: 8vh;
+    width:15vw;
+    background-color: #ffdc04;
+    height:50px;
+  }
+ .c8div2{
+    width:20vw;
+    height: 10vh;
+    background-color: #ffdc04;
+    margin-top: 10px;
+ }
+ .c8div3{
+    width:35vw;
+    height:40px;
+    background-color: #ffdc04;
+    font-size: 15px;
+    margin-top: 20px;
+    
+ }
+ .c8div1 img{
+    width:100%;
+    height:100%;
+ }
+ .c8div3 button{
+    width: 20vw;
+    height:40px;
+    color: white;
+    background-color: #0E3051;
+    border:1px solid #0E3051;
+    border-radius: 5px;
+    margin-left: 5vw;
+    transition: 0.6s;
+ }
+ .c8div2 span{
+    font-size: 24px;
+ }
+ .signupnow:hover{
+    background-color: black;
+    color: white;
+ }
+ /* container9 */
+ .container9{width: 100%;
+    height:15vh;
+    background-color: #0E3051;
+    margin-top: 10vh;
+  }
+  .container9 img{
+    width:100%;
+    height:100%;
+  }
+  /* container10 */
+  .container10{
+    width:100%;
+    height:auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 8vh;
+  }
+  .container10 button{
+    width:30vw;
+    height: 10vh;
+    font-size: 13px;
+    background-color: #0E3051;
+    color: white;
+    border-radius: 8px;
+    border:none;
+  }
+  .container11{
+    width:100%;
+    height:15vh;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10vh;
+    text-align: center;
+  }
+  .c111{
+    margin-left: 15vw;
+  }
+  .c112{
+    margin-left: 4vw;
+  }
+  .c113{
+    margin-right: 10vw;
+  }
+  /* footer */
+  .footer{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .footerl{
+    background-color: white;
+  width: 60%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(8, 30px);
+  padding-left: 40px;
+  padding-top: 30px;
+  }
+  .footerr{
+    width: 35%;
+    /* background-color: #F5E7A2; */
+  }
+  .childr1{
+    width:25vw;
+    height:10vh;
+    background-color: #0E3051;
+  }
+  .childr1 img{
+    width: 100%;
+    height: 100%;
+  }
+  .childr2{
+    width:30vw;
+    height:6vh;
+    background-color: white;
+    margin-left: 20px;
+  }
+  .childr2 input{
+    
+    width:30vw;
+    height:20px;
+    border:1px solid black ;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+  }
+  .childr3{
+    width:30vw;
+    height:6vh;
+    background-color: #0E3051;
+    margin-left: 20px;
+  }
+  .childr3 img{
+    width:100%;
+    height:100%;
+  }
+
+
 
 
 @media  (max-width:467px){
@@ -515,6 +732,10 @@ left:10px;
         width:40vw;
         height:30vh;
     }
+    /* container4 */
+    .container4{
+        margin-top: 10vh;
+    }
     /* container5 */
     .container5divs{
         height:50vh;
@@ -530,6 +751,57 @@ left:10px;
         height:60vh;
         min-width:40vw;
     }
+    /* container7 */
+    .container7{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+      }
+    .container7dis1{
+        height:70vh;
+        width:100%;
+        margin-left: 0px;
+      }
+      .container7divs11{
+        height:50vh;
+        width:100%
+      }
+      .container7divs2{
+        height:40vh;
+        width:100%;
+      }
+      .c7d2divs1{
+        height: 20vh;
+        width:100%;
+        background-color: #0E3051;
+        
+      }
+      /* container8 */
+      .container8{
+        width: 100%;
+      }
+      .c8box{
+        width:70vw;
+        height:50vh;
+      }
+      .c8div1{
+        width:30vw;
+      }
+      .c8div2{
+        width:40vw;
+      }
+      .c8div3{
+        width:60vw;
+        margin-top: 5vh;
+      }
+      .signupnow{
+        width:20vw;
+      }
+      /* container9 */
+      .container9{width: 100%;
+    height:15vh;
+  }
 
 }
 @media(min-width:470px) and (max-width:867px){
@@ -608,6 +880,53 @@ left:10px;
         height:80vh;
         min-width:30vw;
     }
+    /* container7 */
+    .container7{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+      }
+    .container7dis1{
+        height:70vh;
+        width:100%;
+        margin-left: 0px;
+      }
+      .container7divs11{
+        height:50vh;
+        width:100%
+      }
+      .container7divs2{
+        height:40vh;
+        width:100%;
+      }
+      .c7d2divs1{
+        height: 20vh;
+        width:100%;
+        background-color: #0E3051;
+        
+      }
+      /* container8 */
+      .container8{
+        width: 100%;
+      }
+      .c8box{
+        width:70vw;
+        height:50vh;
+      }
+      .c8div1{
+        width:30vw;
+      }
+      .c8div2{
+        width:40vw;
+      }
+      .c8div3{
+        width:60vw;
+        margin-top: 5vh;
+      }
+      .signupnow{
+        width:20vw;
+      }
     }
 
 
